# streamdeck-notify

./: .gitignore  CLAUDE.md  Makefile  README.md  config.yaml  pyproject.toml  setup.sh
src/: bridge.py  daemon.py  deck.py  google_setup.py  renderer.py
src/plugins/: __init__.py  base.py  cicd.py  docker_status.py  github.py  gitlab.py  gmail.py  goa.py  google_calendar.py  slack.py  spotify.py  system.py  system_detail.py  weather.py
streamcontroller-pages/: Home.json  System.json
streamcontroller-plugin/: globals.py  main.py  manifest.json
streamcontroller-plugin/actions/: MediaControlAction.py  MicMuteAction.py  NotifyAction.py  PageSwitchAction.py  PomodoroAction.py  ResetAllAction.py  SystemDetailAction.py  VolumeAction.py
streamcontroller-plugin/internal/: auto_brightness.py  bridge_client.py  host.py  page_switch.py
systemd/: notify-bridge.service  streamdeck-notify.service
tests/: conftest.py  test_bridge.py  test_plugin_internals.py
